--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-        background: linear-gradient(180deg, #340707, #110F6F); /* Você pode ajustar as cores ou ângulo se necessário */
+        background: linear-gradient(180deg, #340707, #110F6F); 
         min-height: 100vh;
 
     }
@@ -9,5 +9,5 @@ body{
     border-radius: 10px;
     padding: 15px;
     margin-top: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
 }
